--- a/styles/globals.css
+++ b/styles/globals.css
@@ -84,3 +84,31 @@
   font-display: swap;
 }
 
+
+@font-face {
+  font-family: 'Gasalt';
+  src: url('/fonts/gasalt/Gasalt-Black.woff2') format('woff2'),
+      url('/fonts/gasalt/Gasalt-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gasalt';
+  src: url('/fonts/gasalt/Gasalt-Thin.woff2') format('woff2'),
+      url('/fonts/gasalt/Gasalt-Thin.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gasalt';
+  src: url('/fonts/gasalt/Gasalt-Regular.woff2') format('woff2'),
+      url('/fonts/gasalt/Gasalt-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
